--- a/src/main/resources/templates/owners/index.html
+++ b/src/main/resources/templates/owners/index.html
@@ -2,9 +2,25 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>List of Owners</title>
+    <title>Pet Clinic</title>
 </head>
 <body>
-<h1>List of Owners</h1>
+    <h1>List of Owners</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+            </tr>
+        </thead>
+        <tbody>
+        <tr th:each="owner : ${owners}">
+            <td th:text="${owner.id}">-1</td>
+            <td th:text="${owner.firstName}">John</td>
+            <td th:text="${owner.lastName}">Doe</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
